<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cumm_vendor</name>
  <version>0.5.3</version>
  <description>
    Wrapper around cumm.
  </description>

  <maintainer email="esteve.fernandez@tier4.jp">Esteve Fernandez</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://github.com/FindDefinition/cumm</url>

  <author email="esteve.fernandez@tier4.jp">Esteve Fernandez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>